inline styling added in  index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Github-pull command</h1>
+    <h1 style="color:blue;">Github-pull command</h1>
+    <p>This is paragraph.</p>
 </body>
 </html>
