changes in file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1 style="color:blue;">Github-pull command</h1>
     <p>This is paragraph.</p>
+    <input type="text" placeholder="Type Here...">
+    <button>Click Me</button>
 </body>
 </html>
